[gd_scene format=3 uid="uid://de88q44bwo4cv"]

[ext_resource type="Script" uid="uid://ca4nl124itjou" path="res://scripts/DRIVE/DRIVE.gd" id="1_g2hhb"]
[ext_resource type="PackedScene" uid="uid://cxt27f4kj5o8k" path="res://scenes/DRIVE/obstacleDRIVE.tscn" id="2_5vaav"]
[ext_resource type="PackedScene" uid="uid://unljr5jovn0n" path="res://scenes/DRIVE/finishDRIVE.tscn" id="3_c7es3"]
[ext_resource type="PackedScene" uid="uid://l56h1kepouiy" path="res://scenes/DRIVE/backgroundDRIVE.tscn" id="3_l5ikd"]
[ext_resource type="Texture2D" uid="uid://cfg18gurvqflu" path="res://assets/Voiture.PNG" id="4_g2hhb"]
[ext_resource type="Script" uid="uid://bkgfurpxq4adi" path="res://scripts/DRIVE/playerDRIVE.gd" id="5_uq5y1"]
[ext_resource type="Texture2D" uid="uid://d2jc5qs5tamm4" path="res://assets/Fl√®che .png" id="7_grsti"]
[ext_resource type="PackedScene" uid="uid://6fqxo167meal" path="res://scenes/DRIVE/PauseDRIVE.tscn" id="8_grsti"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1w5xt"]
size = Vector2(1564.4443, 881.7783)

[node name="DRIVE" type="Node2D" unique_id=1168583214]
script = ExtResource("1_g2hhb")
obstacle_scene = ExtResource("2_5vaav")
finish_scene = ExtResource("3_c7es3")
obstacle_time = 2
finish_time = 45
goal_speed = 1200.0
lerp_speed = 0.005

[node name="Camera2D" type="Camera2D" parent="." unique_id=48228677]
position = Vector2(799, 452)

[node name="BackgroundDRIVE" parent="Camera2D" unique_id=2069217799 instance=ExtResource("3_l5ikd")]

[node name="Sprite2D" parent="Camera2D/BackgroundDRIVE/Parallax2D" parent_id_path=PackedInt32Array(2069217799, 961169188) index="0" unique_id=1188252442]
position = Vector2(0, -4)

[node name="PlayerDRIVE" type="Sprite2D" parent="." unique_id=1213732951]
scale = Vector2(0.0703125, 0.0703125)
texture = ExtResource("4_g2hhb")
script = ExtResource("5_uq5y1")

[node name="Area2D" type="Area2D" parent="PlayerDRIVE" unique_id=234969869]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDRIVE/Area2D" unique_id=293298769]
shape = SubResource("RectangleShape2D_1w5xt")

[node name="UpArrow" type="Sprite2D" parent="PlayerDRIVE" unique_id=853752735]
position = Vector2(127.99997, -938.6666)
rotation = -1.5707964
scale = Vector2(0.41666663, 0.41666642)
texture = ExtResource("7_grsti")

[node name="DownArrow" type="Sprite2D" parent="PlayerDRIVE" unique_id=887612098]
position = Vector2(128, 952.8892)
rotation = 1.5707964
scale = Vector2(0.417, 0.417)
texture = ExtResource("7_grsti")

[node name="Finish" type="Node2D" parent="." unique_id=1325357810]

[node name="Obstacles" type="Node2D" parent="." unique_id=55187538]

[node name="PauseRemap" parent="." unique_id=1264044334 instance=ExtResource("8_grsti")]
visible = false
offset_left = -3.0
offset_top = 6.0
offset_right = 1595.0
offset_bottom = 897.0

[connection signal="hit" from="PlayerDRIVE" to="." method="_on_player_drive_hit"]
[connection signal="area_entered" from="PlayerDRIVE/Area2D" to="PlayerDRIVE" method="_on_area_2d_area_entered"]

[editable path="Camera2D/BackgroundDRIVE"]
